payment buttons adjustments

--- a/index.html
+++ b/index.html
@@ -53,9 +53,8 @@
           </div>
 
           <div class="payment-buttons">
-            <button><a href="#">Proceed to Payment</a></button>
-            <button><a href="#">Cancel Order</a></button>
-            
+            <a href="#">Proceed to Payment</a>
+            <a href="#">Cancel Order</a>
           </div>
 
         </div>
